# learn-cmake

./: readme.md
dll-so-a/: add.c  add.h  main  main.c  readme.txt
lec1/: main.cpp  out  readme.md
lec2/: CMakeLists.txt  main.cpp  readme.md
lec2/someLibDemo/: readme.md
lec2/someLibDemo/myadderlib/: CMakeLists.txt  adder.cpp  adder.h
lec2/someLibDemo/src/: CMakeLists.txt  main.cpp
